--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ tofu/main/*/.terraform.lock.hcl
 tofu/main/*/terraform.tfstate
 tofu/main/*/terraform.tfstate.*
 tofu/main/*/config
+*.tfvars
 
 bin/out.json
 bin/results.csv
